adds timer since user sign up + changes to swagger
