# swagger.json
@@ -746,38 +746,47 @@
           },
           "password": {
             "type": "string",
-            "description": "User's password",
-            "example": "Qwerty123"
+            "description": "User's password (min. 6, max. 16, 1 digit, 1 uppercase and 1 lower case",
+            "example": "Qwerty12345v"
           }
         }
       },
       "LoginResponse": {
         "type": "object",
         "properties": {
-          "_id": {
-            "type": "string",
-            "description": "User's id",
-            "example": "64ecb56e7c83b02f5b79709d"
+          "userData": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "description": "User's id",
+                "example": "64ecb56e7c83b02f5b79709d"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "Alex"
+              },
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email"
+              },
+              "avatarURL": {
+                "type": "string",
+                "description": "User's avatar link",
+                "example": "//www.gravatar.com/avatar/d9e6b34c905e346796a4d1eda209400e"
+              },
+              "token": {
+                "type": "string",
+                "description": "User's token",
+                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0ZWNiNTZlN2M4M2IwMmY1Yjc5NzA5ZCIsImlhdCI6MTY5MzIzNTM0MSwiZXhwIjoxNjkzMzE4MTQxfQ.QarylEOCqImrtibxJRXtxOWIJDecBvUVfLy6mAvlrPQ"
+              }
+            }
           },
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "example": "Alex"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email"
-          },
-          "avatarURL": {
-            "type": "string",
-            "description": "User's avatar link",
-            "example": "//www.gravatar.com/avatar/d9e6b34c905e346796a4d1eda209400e"
-          },
-          "token": {
-            "type": "string",
-            "description": "User's token",
-            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0ZWNiNTZlN2M4M2IwMmY1Yjc5NzA5ZCIsImlhdCI6MTY5MzIzNTM0MSwiZXhwIjoxNjkzMzE4MTQxfQ.QarylEOCqImrtibxJRXtxOWIJDecBvUVfLy6mAvlrPQ"
+          "sinceSignUp": {
+            "type": "integer",
+            "description": "miliseconds since user sign up"
           }
         },
         "example": {
